[package]
name = "inline-python"
version = "0.14.4"
description = "Inline Python code directly in your Rust code"
license = "BSD-2-Clause"
edition = "2024"
repository = "https://github.com/m-ou-se/inline-python"
keywords = ["python", "inline", "embed", "macro"]
autoexamples = false
rust-version = "1.88.0"

[dependencies]
inline-python-macros = { version = "0.16.1", path = "./macros" }
pyo3 = { version = "0.25", default-features = false, features = ["auto-initialize"] }

[features]
pyo3-macros = ["pyo3/macros"]
pyo3-multiple-pymethods = ["pyo3/multiple-pymethods"]
pyo3-extension-module = ["pyo3/extension-module"]
pyo3-abi3 = ["pyo3/abi3"]
pyo3-abi3-py36 = ["pyo3/abi3-py36"]
pyo3-abi3-py37 = ["pyo3/abi3-py37"]
pyo3-abi3-py38 = ["pyo3/abi3-py38"]
pyo3-abi3-py39 = ["pyo3/abi3-py39"]
pyo3-auto-initialize = ["pyo3/auto-initialize"]
pyo3-nightly = ["pyo3/nightly"]

[workspace]
members = ["examples", "ct-python"]
